fix: duplicated tasks in my day and lazy load problems